# AttendanceSystemWithFaceRecognizer

./: CMakeLists.txt  README.md  main.cpp
data/: make_csv.py  pics.csv
models/: haarcascade_frontalface_alt2.xml  lbpcascade_frontalface.xml  lbpcascade_frontalface_improved.xml
pics_data/: make_csv.py  pics.csv  transform_data.py
pics_data/16/: 0.pgm  1.pgm  10.pgm  11.pgm  12.pgm  13.pgm  14.pgm  15.pgm  16.pgm  17.pgm  18.pgm  19.pgm  2.pgm  20.pgm  21.pgm  22.pgm  23.pgm  24.pgm  25.pgm  26.pgm  27.pgm  28.pgm  29.pgm  3.pgm  30.pgm  31.pgm  32.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
srcs/: FaceRecognizer.cpp  FaceRecognizer.h  attendance.cpp  attendance.h  common.h  filter.cpp  filter.h  person.cpp  person.h
